--- a/download.html
+++ b/download.html
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/"><i class="fa-solid fa-house" style="color: #ff0000;"></i> Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html"><i class="fa-solid fa-house" style="color: #ff0000;"></i> Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" aria-current="page" href="/faq.html"><i class="fa-solid fa-circle-info" style="color: #ff0000;"></i> FAQ</a>
