--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       </div>
     </div>
     <p>
-      &copy; Gravity clint
-      <a href="">Ron</a>
+      &copy; Gravity Client
+      <a href="https://discord.gg/ChgRBvRhAx">Ron</a>
     </p>
   </section>
   <!-- footer section -->
