--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             </div>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">HOME</a>
-                <a href="faq.html">Faq</a>
-                <a href="download.html">Download</a>
-                <a href="discord.html">Discord</a>
+                <a href="https://rongaming7777.github.io/gravity-client/index.html">HOME</a>
+                <a href="faq.html">https://rongaming7777.github.io/gravity-client/faq.html</a>
+                <a href="https://rongaming7777.github.io/gravity-client/download.html">Download</a>
+                <a href="https://rongaming7777.github.io/gravity-client/discord.html">Discord</a>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
               </p>
 
               <div class="btn-box">
-                <a href="download.html" class="btn-1">
+                <a href="https://rongaming7777.github.io/gravity-client/download.html" class="btn-1">
                   Download 
                 </a>
                 <a href="version.html" class="btn-2">
