--- a/faq.html
+++ b/faq.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="https://rongaming7777.github.io/gravity-client/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/faq.html">FAQ</a>
+                        <a class="nav-link active" aria-current="page" href="https://rongaming7777.github.io/gravity-client/faq.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/download.html">Download</a>
+                        <a class="nav-link" aria-current="page" href="https://rongaming7777.github.io/gravity-client/download.html">Download</a>
                     </li>
                     <li class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-                        <a class="nav-link" aria-current="page" href="https://discord.gg/S83DznqRxJ">Join the Discord
+                        <a class="nav-link" aria-current="page" href="https://rongaming7777.github.io/gravity-client/discord.html">Join the Discord
 server</a>
                     </li>
                 </ul>
