--- a/discord.html
+++ b/discord.html
@@ -48,16 +48,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html"><i class="fa-solid fa-house" style="color: #ff0000;"></i> Home</a>
+                        <a class="nav-link" aria-current="page" href="https://rongaming7777.github.io/gravity-client/index.html"><i class="fa-solid fa-house" style="color: #ff0000;"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="faq.html"><i class="fa-solid fa-circle-info" style="color: #ff0000;"></i> Faq</a>
+                        <a class="nav-link" aria-current="page" href="https://rongaming7777.github.io/gravity-client/faq.html"><i class="fa-solid fa-circle-info" style="color: #ff0000;"></i> Faq</a>
                     </li>
                     <li class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-                        <a class="nav-link" aria-current="page" href="download.html"> <i class="fa-solid fa-download" style="color: #ff0000;"></i> Download</a>
+                        <a class="nav-link" aria-current="page" href="https://rongaming7777.github.io/gravity-client/download.html"> <i class="fa-solid fa-download" style="color: #ff0000;"></i> Download</a>
                     </li>
                     <li class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-                        <a class="nav-link active" aria-current="page" href="discord.html"><i class="fa-brands fa-discord" style="color: #ff0000;"></i> Join the Discord server</a>
+                        <a class="nav-link active" aria-current="page" href="https://rongaming7777.github.io/gravity-client/discord.html"><i class="fa-brands fa-discord" style="color: #ff0000;"></i> Join the Discord server</a>
                     </li>
                 </ul>
             </div>
