--- a/index.html
+++ b/index.html
@@ -124,23 +124,15 @@
 
       <div class="side_heading">
 
-        <h4 style="color:red">
-
+        <h5 style="color:cyan">
           G
-
           r
-
           a
-
           v
-
           i
-
           t
-
           y
-
-        </h4>
+        </h5>
 
       </div>
 
