--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta name="author" content="" />
 
   <title>Gravity Client</title>
+  <link rel="icon" type="icon" href="/images/logo.png">
 
   <!-- slider stylesheet -->
 
