--- a/faq.html
+++ b/faq.html
@@ -53,13 +53,13 @@
 
                     <li class="nav-item">
 
-                        <a class="nav-link" aria-current="page" href="faq.html"><i class="fa-solid fa-circle-info" style="color: #ff0000;"></i> Faq</a>
+                        <a class="nav-linknav-link active" aria-current="page" href="faq.html"><i class="fa-solid fa-circle-info" style="color: #ff0000;"></i> Faq</a>
 
                     </li>
 
                     <li class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
 
-                        <a class="nav-link active" aria-current="page" href="download.html"> <i class="fa-solid fa-download" style="color: #ff0000;"></i> Download</a>
+                        <a class="nav-link" aria-current="page" href="download.html"> <i class="fa-solid fa-download" style="color: #ff0000;"></i> Download</a>
 
                     </li>
 
