--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="author" content="" />
 
   <title>Gravity Client</title>
-  <link rel="icon" type="icon" href="/images/logo.png">
+  <link rel="icon" type="image/x-icon" href="images/logo.ico">
 
   <!-- slider stylesheet -->
 
