--- a/index.html
+++ b/index.html
@@ -176,16 +176,9 @@
               <h1 style="color:red">
 
                 Gravity <br>
-
-                Client
-
-              </h1>
-
-              <p style="color:lime"></pstyle>
-
-                Here you can download Gravity Client, the best Minecraft PvP client.
-
-              </p>
+Client
+</h1>
+              <span style="color:#FF0000">H</span><span style="color:#FF1A00">e</span><span style="color:#FF3500">r</span><span style="color:#FF4F00">e</span> <span style="color:#FF6A00">y</span><span style="color:#FF8400">o</span><span style="color:#FF9E00">u</span> <span style="color:#FFB900">c</span><span style="color:#FFD300">a</span><span style="color:#FFED00">n</span> <span style="color:#F6FF00">d</span><span style="color:#DCFF00">o</span><span style="color:#C1FF00">w</span><span style="color:#A7FF00">n</span><span style="color:#8DFF00">l</span><span style="color:#72FF00">o</span><span style="color:#58FF00">a</span><span style="color:#3EFF00">d</span> <span style="color:#23FF00">G</span><span style="color:#09FF00">r</span><span style="color:#00FF12">a</span><span style="color:#00FF2C">v</span><span style="color:#00FF46">i</span><span style="color:#00FF61">t</span><span style="color:#00FF7B">y</span> <span style="color:#00FF95">C</span><span style="color:#00FFB0">l</span><span style="color:#00FFCA">i</span><span style="color:#00FFE5">e</span><span style="color:#00FFFF">n</span><span style="color:#00E5FF">t</span><span style="color:#00CAFF">,</span> <span style="color:#00B0FF">t</span><span style="color:#0095FF">h</span><span style="color:#007BFF">e</span> <span style="color:#0061FF">b</span><span style="color:#0046FF">e</span><span style="color:#002CFF">s</span><span style="color:#0012FF">t</span> <span style="color:#0900FF">M</span><span style="color:#2300FF">i</span><span style="color:#3E00FF">n</span><span style="color:#5800FF">e</span><span style="color:#7200FF">c</span><span style="color:#8D00FF">r</span><span style="color:#A700FF">a</span><span style="color:#C100FF">f</span><span style="color:#DC00FF">t</span> <span style="color:#F600FF">P</span><span style="color:#FF00ED">v</span><span style="color:#FF00D3">P</span> <span style="color:#FF00B9">c</span><span style="color:#FF009E">l</span><span style="color:#FF0084">i</span><span style="color:#FF006A">e</span><span style="color:#FF004F">n</span><span style="color:#FF0035">t</span><span style="color:#FF001A">.</span>
 
               <div class="btn-box">
 
